Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-38125

Assertion !thd->rgi_slave failed on INSERT under LOCK TABLES

    XMLWordPrintable

Details

    • Not for Release Notes
    • Q4/2025 Server Development, Q1/2026 Server Development, Q1/2026 Server Maintenance

    Description

      Locking a global temporary table causes a crash on slave (and an inappropriate table open), even if the table wasn't used in the statement, but just locked.

      -- source include/have_binlog_format_row.inc
      -- source include/master-slave.inc
       
      create table t(x int);
      create global temporary table src(x int) on commit preserve rows;
      insert src values(1);
      lock tables t write, src write;
      insert t values(1);
      show binlog events;
      sync_slave_with_master;
      

      Attachments

        Issue Links

          Activity

            People

              Roel Roel Van de Paar
              nikitamalyavin Nikita Malyavin
              Roel Van de Paar Roel Van de Paar
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.