MDEV-38125 Assertion !thd->rgi_slave failed on INSERT under LOCK TABLES

Locking a global temporary table causes a crash on slave,
even if the table wasn't used in the statement, but just locked.

The crash, and an inappropriate open of global temporary table happens
because its table mapping was replicated. Rows_log_event opens all the
tables that were aggregated by Table_map_log_event.

THD::binlog_write_table_maps aggressively logs all the tables that
were write-locked, even if they will never be used.

Solution: We should never log table maps for global temporary tables

Parent issue:
MDEV-35915 Implement Global temporary tables